# MemoryPool

./: .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: build.yml  build_and_test.yml
Benchmark/: CMakeLists.txt
Benchmark/MemoryPool/: Adapters.hpp  AllocateDeallocate.cpp  Allocation.cpp  CMakeLists.txt  Common.hpp  DataTypes.hpp  Deallocation.cpp  MixedAllocateDeallocate.cpp  Types.hpp
Source/: CMakeLists.txt
Source/Memory/: CMakeLists.txt  TypedUnorderedPool.hpp  UnorderedPool.cpp  UnorderedPool.hpp
Source/Memory/Private/: Commons.cpp  Commons.hpp  PoolDetail.cpp  PoolDetail.hpp
Test/: CMakeLists.txt
Test/Memory/: CMakeLists.txt  CommonCases.cpp  CommonCases.hpp  TestModule.cpp  TypedUnorderedPool.cpp  TypedUnorderedTrivialPool.cpp  UnorderedPool.cpp  UnorderedTrivialPool.cpp
